--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="d-flex flex-column vh-100 bg-dark">
+  <body class="d-flex flex-column vh-100" style="background-color: #262626;">
 
 
     <main class="text-light pb-5 mb-auto">
