--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer class="bg-secondary text-center">
+<footer class="text-center" style="background-color: #303030;">
   <div class="text-white p-5">© Horrers</div>
 </footer>
