--- a/app/views/layouts/_read_only_raty.html.erb
+++ b/app/views/layouts/_read_only_raty.html.erb
@@ -2,8 +2,8 @@
   $('.total-rate').empty();
   $('.total-rate').raty({
     readOnly: true,
-    starOn: "<%= asset_path('star-on.png') %>",
-    starOff: "<%= asset_path('star-off.png') %>",
+    starOn: "<%= asset_path('star_on.png') %>",
+    starOff: "<%= asset_path('star_off.png') %>",
     score: function() {
       return $(this).attr('data-score')
     }
@@ -11,8 +11,8 @@
   $('.story-rate').empty();
   $('.story-rate').raty({
     readOnly: true,
-    starOn: "<%= asset_path('star-on.png') %>",
-    starOff: "<%= asset_path('star-off.png') %>",
+    starOn: "<%= asset_path('book_on.png') %>",
+    starOff: "<%= asset_path('book_off.png') %>",
     score: function() {
       return $(this).attr('data-score')
     }
@@ -20,8 +20,8 @@
   $('.fear-rate').empty();
   $('.fear-rate').raty({
     readOnly: true,
-    starOn: "<%= asset_path('star-on.png') %>",
-    starOff: "<%= asset_path('star-off.png') %>",
+    starOn: "<%= asset_path('skull_on.png') %>",
+    starOff: "<%= asset_path('skull_off.png') %>",
     score: function() {
       return $(this).attr('data-score')
     }
@@ -29,8 +29,8 @@
   $('.splatter-rate').empty();
   $('.splatter-rate').raty({
     readOnly: true,
-    starOn: "<%= asset_path('star-on.png') %>",
-    starOff: "<%= asset_path('star-off.png') %>",
+    starOn: "<%= asset_path('drop_on.png') %>",
+    starOff: "<%= asset_path('drop_off.png') %>",
     score: function() {
       return $(this).attr('data-score')
     }
