--- a/app/views/public/posts/_posts_index.html.erb
+++ b/app/views/public/posts/_posts_index.html.erb
@@ -1,20 +1,18 @@
 <% posts.each do |post| %>
   <div class="row border rounded p-3 my-3">
-    <div class="col-3">
+    <div class="col-6 col-md-3 mb-3">
       <%= image_tag post.get_tmdb_data[:image_url], class: "card-img" %>
     </div>
 
-    <!--<div class="col-1"></div>-->
-
-    <div class="col-9">
+    <div class="col-12 col-md-9">
       <div class="row">
         <P class="font-weight-bold"><%= post.get_tmdb_data[:title] %></P>
       </div>
 
       <div class="row">
-        <div class="col-2">
+        <div class="col-4 col-md-3 col-lg-2">
           <%= link_to user_post_list_path(post.user.id) do %>
-            <%= image_tag post.user.get_image(70, 70), class: "rounded-circle" %>
+            <%= image_tag post.user.get_image(70, 70), class: "rounded-circle card-img" %>
           <% end %>
         </div>
         <div class="col">
@@ -23,7 +21,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-md-12 col-lg-6">
           <label>total　</label>
           <span class="total-rate" data-score="<%= post.total_rate %>"></span>
@@ -43,7 +41,7 @@
       </div>
 
       <div class="row pt-4">
-        <div class="col-6">
+        <div class="col-11 col-lg-6">
           <%= link_to "レビューを見る", post_path(post), class: "btn btn-sm btn-secondary w-75" %>
         </div>
 
