--- a/app/views/public/users/post_list.html.erb
+++ b/app/views/public/users/post_list.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
   <div class="row">
-    <h4 class="col-8 mx-auto"><%= @user.name %>さんの投稿一覧</h4>
+    <h4 class="col-8 py-4 mx-auto"><%= @user.name %>さんの投稿一覧</h4>
   </div>
 
   <div class="row py-3">
-    <div class="col-4 text-right">
-      <%= image_tag @user.get_image(200, 200), class: "rounded-circle" %>
+    <div class="col-4 col-md-3 col-lg-2 mx-auto">
+      <%= image_tag @user.get_image(170, 170), class: "rounded-circle card-img" %>
     </div>
 
-    <div class="col-5">
+    <div class="col-7">
       <P class="font-weight-bold"><%= @user.name %></P>
       <P><%= @user.introduction %></P>
     </div>
   </div>
 
   <div class="row">
-    <h5 class="col-8 mx-auto">投稿一覧</h5>
+    <h5 class="col-8 py-4 mx-auto">投稿一覧</h5>
   </div>
 
   <div class="row">
