--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -4,29 +4,27 @@
   </div>
 
   <div class="row">
-    <div class="col-5 text-right">
-      <%= image_tag @user.get_image(200, 200), class: "rounded-circle" %>
+    <div class="col-4 col-sm-3 col-lg-2 mx-auto">
+      <%= image_tag @user.get_image(170, 170), class: "rounded-circle card-img" %>
     </div>
 
-    <div class="col-1"></div>
-
-    <div class="col-5">
+    <div class="col-5 col-md-6">
       <div class="row">
         ニックネーム<br>
        <%= @user.name %>
       </div>
-      <div class="row">
+      <div class="row mt-3">
         プロフィール<br>
         <%= @user.introduction %>
       </div>
-      <div class="row">
+      <div class="row mt-3">
         <%= link_to "編集する", edit_users_path, class: "btn btn-sm btn-secondary" %>
       </div>
     </div>
   </div>
 
   <div class="row">
-    <h5 class="col-8 mx-auto">投稿一覧</h5>
+    <h5 class="col-8 py-4 mx-auto">投稿一覧</h5>
   </div>
 
   <div class="row">
