--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div class="row">
-    <%= select_tag "rate", options_for_select({total: 1, story: 2, fear: 3, splatter: 4}, 1) %>
+    <%= select_tag "rate", options_for_select({Total: "Total", Story: "Story", Fear: "Fear", Splatter: "Splatter"}, "Total") %>
   </div>
 
   <div class="row mr-5">
