--- a/app/views/public/posts/_posts_index.html.erb
+++ b/app/views/public/posts/_posts_index.html.erb
@@ -23,19 +23,19 @@
 
       <div class="row mt-2">
         <div class="col-md-12 col-lg-6">
-          <label>total　</label>
+          <label>Total　</label>
           <span class="total-rate" data-score="<%= post.total_rate %>"></span>
         </div>
         <div class="col-md-12 col-lg-6">
-          <label>story　</label>
+          <label>Story　</label>
           <span class="story-rate" data-score="<%= post.story_rate %>"></span>
         </div>
         <div class="col-md-12 col-lg-6">
-          <label>fear　</label>
+          <label>Fear　</label>
           <span class="fear-rate" data-score="<%= post.fear_rate %>"></span>
         </div>
         <div class="col-md-12 col-lg-6">
-          <label>splatter </label>
+          <label>Splatter </label>
           <span class="splatter-rate" data-score="<%= post.splatter_rate %>"></span>
         </div>
       </div>
