--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -16,19 +16,19 @@
 
         <div class="row">
           <div id="total-form" class="col-6">
-            <label>total　</label>
+            <label>Total　</label>
             <%= f.hidden_field :total_rate, :value => 'score' %>
           </div>
           <div id="story-form" class="col-6">
-            <label>story　</label>
+            <label>Story　</label>
             <%= f.hidden_field :story_rate, :value => 'score' %>
           </div>
           <div id="fear-form" class="col-6">
-            <label>fear　</label>
+            <label>Fear　</label>
             <%= f.hidden_field :fear_rate, :value => 'score' %>
           </div>
           <div id="splatter-form" class="col-6">
-            <label>splatter　</label>
+            <label>Splatter　</label>
             <%= f.hidden_field :splatter_rate, :value => 'score' %>
           </div>
         </div>
@@ -52,7 +52,7 @@
         </div>
 
         <p class="text-center">
-          <%= f.submit "投稿する", class: "btn btn-sm btn-outline-secondary w-25" %>
+          <%= f.submit "投稿する", class: "btn btn-sm btn-secondary w-25" %>
         </p>
       <% end %>
     </div>
