--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,10 +1,10 @@
 <% if flash[:notice] %>
   <div class="container">
     <div class="row">
-      <div class="col-8 mx-auto mt-3">
-        <p class="text-center text-success font-weight-bold" id="notice">
+      <div class="col-8 mx-auto mt-3 alert alert-dark text-center">
+        <text id="notice">
           <%= flash[:notice] %>
-        </p>
+        </text>
       </div>
     </div>
   </div>
