--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -13,19 +13,19 @@
 
         <div class="row">
           <div id="total-form" class="col-6">
-            <label>total　</label>
+            <label>Total　</label>
             <%= f.hidden_field :total_rate, :value => 'score' %>
           </div>
           <div id="story-form" class="col-6">
-            <label>story　</label>
+            <label>Story　</label>
             <%= f.hidden_field :story_rate, :value => 'score' %>
           </div>
           <div id="fear-form" class="col-6">
-            <label>fear　</label>
+            <label>Fear　</label>
             <%= f.hidden_field :fear_rate, :value => 'score' %>
           </div>
           <div id="splatter-form" class="col-6">
-            <label>splatter　</label>
+            <label>Splatter　</label>
             <%= f.hidden_field :splatter_rate, :value => 'score' %>
           </div>
         </div>
