--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,39 +1,37 @@
 <div class="container">
-  <div class="row pb-3">
-    <h2>ユーザー登録</h2>
-  </div>
-
   <div class="row">
-    <div class="col-md-5 mx-auto">
+    <div class="col-7 col-md-4 mx-auto">
+      <h4 class="mb-4">ユーザー登録</h4>
+
       <%= form_with model: @user, url: registration_path(resource_name) do |f| %>
-      <%= render "public/shared/error_messages", resource: resource %>
+        <%= render "public/shared/error_messages", resource: resource %>
 
-      <div class="field">
-        <%= f.label :name, "ニックネーム" %><br />
-        <%= f.text_field :name, autofocus: true %>
-      </div>
+        <div class="field">
+          <%= f.label :name, "ニックネーム" %><br />
+          <%= f.text_field :name, autofocus: true %>
+        </div>
 
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        (<%= @minimum_password_length %> 文字以上)
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
+        <div class="field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          (<%= @minimum_password_length %> 文字以上)
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
+        <div class="field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
 
-      <div class="actions">
-        <%= f.submit "登録", class: "btn btn-sm btn-success" %>
-      </div>
+        <div class="actions mt-3">
+          <%= f.submit "登録", class: "btn btn-sm btn-warning" %>
+        </div>
       <% end %>
 
       <%= render "public/shared/links" %>
