--- a/app/views/public/posts/_posts_index.html.erb
+++ b/app/views/public/posts/_posts_index.html.erb
@@ -16,8 +16,11 @@
           <% end %>
         </div>
         <div class="col">
-          <p><%= post.user.name %></p>
-          <p><%= "投稿日　" + post.created_at.strftime('%Y/%m/%d') %></p>
+          <p>
+            <%= post.user.name %><br>
+            <%= "投稿日　" + post.created_at.strftime('%Y/%m/%d') %><br>
+            <%= "コメント　" + post.comments.count.to_s + "件" %>
+          </p>
         </div>
       </div>
 
