--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -35,9 +35,10 @@
       </div>
 
       <div class="row">
-        <p><%= paginate @tags %></p>
+        <div class="mx-auto">
+          <p><%= paginate @tags %></p>
+        </div>
       </div>
-
     </div>
   </div>
 </div>
