--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -11,7 +11,7 @@
         </div>
 
         <div class="col-9">
-          <div class="row border-bottom py-2">
+          <div class="row border-bottom border-secondary py-2">
             <div class="col-12 col-lg-4">
             ユーザー名
             </div>
@@ -21,7 +21,7 @@
             </div>
           </div>
 
-          <div class="row border-bottom py-2">
+          <div class="row border-bottom border-secondary py-2">
             <div class="col-12 col-lg-4">
             プロフィール
             </div>
@@ -31,7 +31,7 @@
             </div>
           </div>
 
-          <div class="row border-bottom py-2">
+          <div class="row border-bottom border-secondary py-2">
             <div class="col-12 col-lg-4">
             アカウント
             </div>
@@ -56,7 +56,7 @@
       </div>
 
       <% @user.posts.each do |post| %>
-        <div class="row border rounded mb-2">
+        <div class="row border border-secondary rounded mb-2">
           <div class="col">
             <p>
               <%= post.created_at.strftime('%Y/%m/%d') %><br>
