--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,7 +1,7 @@
 <% if flash[:notice] %>
   <div class="container">
     <div class="row">
-      <div class="col-8 mx-auto mt-3 alert alert-dark text-center">
+      <div class="col-8 mx-auto alert alert-dark text-center">
         <text id="notice">
           <%= flash[:notice] %>
         </text>
