--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,7 +1,20 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-8 mx-auto">
-      <p></p>
+    <div class="col-md-8 mx-auto text-center">
+      <h2 class="border-bottom pb-2">ABOUT</h2>
+      <p class="mt-5">
+        Horrersはホラー映画、ドラマに特化したレビューサイトです。<br>
+        ホラー作品をより詳細に評価するため、<br>
+        Total、Story、Fear、Splatter、４つのレート機能を作りました。<br>
+        そしてそのレートから投稿を検索することができます。<br>
+        ホラー作品の検索や、備忘録としてお役に立てればと思います。
+      </p>
+
+      <p>
+        ※　投稿の際にレビューにネタばれを含む場合は、<br>
+        ネタバレありのチェックを入れてください。<br>
+        基本的にコメントでのネタバレはご遠慮ください。
+      </p>
     </div>
   </div>
 </div>
