--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -49,7 +49,7 @@
         </div>
 
         <p class="text-center">
-          <%= f.submit "変更する", class: "btn btn-sm btn-outline-secondary w-25" %>
+          <%= f.submit "変更する", class: "btn btn-sm btn-secondary w-25" %>
         </p>
       <% end %>
     </div>
