--- a/app/views/public/searchs/_movie_detail.html.erb
+++ b/app/views/public/searchs/_movie_detail.html.erb
@@ -1,4 +1,4 @@
-<div class="row border rounded">
+<div class="row border border-secondary rounded">
   <div class="col-6 col-md-3 my-3">
     <% if movie['poster_path'].present? %>
       <%= image_tag "https://image.tmdb.org/t/p/w342" + movie['poster_path'] , class: "card-img" %>
