--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,24 +1,40 @@
 <div class="container">
   <div class="row">
-    <h4 class="col-8 py-4 mx-auto">マイページ</h4>
-  </div>
-
-  <div class="row">
-    <div class="col-4 col-sm-3 col-lg-2 mx-auto">
-      <%= image_tag @user.get_image(170, 170), class: "rounded-circle card-img" %>
-    </div>
-
-    <div class="col-5 col-md-6">
+    <div class="col-md-10 col-lg-8 mx-auto">
       <div class="row">
-        ニックネーム<br>
-       <%= @user.name %>
+        <h4 class="col-8 py-4">マイページ</h4>
       </div>
-      <div class="row mt-3">
-        プロフィール<br>
-        <%= @user.introduction %>
-      </div>
-      <div class="row mt-3">
-        <%= link_to "編集する", edit_users_path, class: "btn btn-sm btn-secondary" %>
+
+      <div class="row">
+        <div class="col-3 col-lg-2">
+          <%= image_tag @user.get_image(170, 170), class: "rounded-circle card-img" %>
+        </div>
+
+        <div class="col-9">
+          <div class="row border-bottom border-secondary py-2">
+            <div class="col-12 col-lg-4">
+              ニックネーム
+            </div>
+
+            <div class="col">
+              <%= @user.name %>
+            </div>
+          </div>
+
+          <div class="row border-bottom border-secondary py-2">
+            <div class="col-12 col-lg-4">
+              プロフィール
+            </div>
+
+            <div class="col">
+              <%= @user.introduction %>
+            </div>
+          </div>
+
+          <div class="text-center mt-3">
+            <%= link_to "編集する", edit_users_path, class: "btn btn-sm btn-secondary" %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -35,7 +51,9 @@
 
 
   <div class="row">
-    <p><%= paginate @posts %></p>
+    <div class="mx-auto">
+      <p><%= paginate @posts %></p>
+    </div>
   </div>
 
 </div>
