--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,43 +1,41 @@
-<div class="row border-bottom mr-5">
-  <h6>レビューレート検索</h6>
+<div class="row mt-4">
+  <div class="col border rounded mx-3 p-2">
+    <h6 class="border-bottom font-weight-bold pb-2">レビューレート検索</h6>
+
+    <%= form_tag(search_rate_path, method: :get) do %>
+      <div class="mt-3 mb-2">
+        カテゴリー
+      </div>
+
+      <div class="row border-bottom border-secondary mx-1">
+        <div class="col-6 px-0">
+          <%= radio_button_tag("post_category", "movie", checked=true) %>
+          <%= label_tag("post_category_movie", "映画") %>
+        </div>
+        <div class="col-6 px-0">
+          <%= radio_button_tag("post_category", "tv") %>
+          <%= label_tag("post_category_tv", "ドラマ") %>
+        </div>
+      </div>
+
+      <div class="my-2">
+        レート　　<%= select_tag "rate", options_for_select({Total: "Total", Story: "Story", Fear: "Fear", Splatter: "Splatter"}, "Total") %>
+      </div>
+
+      <div class="row border-bottom border-secondary mx-1">
+        <div class="col-6 px-0">
+          <%= radio_button_tag("high_low", "high", checked=true) %>
+          <%= label_tag("high_low_high", "高い順") %>
+        </div>
+        <div class="col-6 px-0">
+          <%= radio_button_tag("high_low", "low") %>
+          <%= label_tag("high_low_low", "低い順") %>
+        </div>
+      </div>
+
+      <div class=" mt-2 pb-3 text-center">
+        <%= submit_tag "検索", class: "btn btn-sm btn-light mx-auto" %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<%= form_tag(search_rate_path, method: :get) do %>
-  <div class="row mt-3 mb-2">
-    カテゴリー
-  </div>
-
-  <div class="row mr-5">
-    <div class="col">
-      <%= radio_button_tag("post_category", "movie", checked=true) %>
-      <%= label_tag("post_category_movie", "映画") %>
-    </div>
-    <div class="col">
-      <%= radio_button_tag("post_category", "tv") %>
-      <%= label_tag("post_category_tv", "ドラマ") %>
-    </div>
-  </div>
-
-  <div class="row mb-2">
-    レート
-  </div>
-
-  <div class="row">
-    <%= select_tag "rate", options_for_select({Total: "Total", Story: "Story", Fear: "Fear", Splatter: "Splatter"}, "Total") %>
-  </div>
-
-  <div class="row mr-5">
-    <div class="col">
-      <%= radio_button_tag("high_low", "high", checked=true) %>
-      <%= label_tag("high_low_high", "高い順") %>
-    </div>
-    <div class="col">
-      <%= radio_button_tag("high_low", "low") %>
-      <%= label_tag("high_low_low", "低い順") %>
-    </div>
-  </div>
-
-  <div class="row mt-2 pb-3 mr-5 border-bottom">
-    <%= submit_tag "検索", class: "btn btn-sm btn-light mx-auto" %>
-  </div>
-<% end %>
