--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -11,11 +11,11 @@
     </div>
 
     <div class="col-sm-8 col-md-9 col-lg-7 mx-auto">
-      <div class="row border-bottom">
+      <div class="row border-bottom border-secondary">
         <p class="font-weight-bold"><%= @post.get_tmdb_data[:title] %></p>
       </div>
 
-      <div class="row border-bottom py-2">
+      <div class="row border-bottom border-secondary py-2">
         <div class="col-3 col-sm-3 col-md-2 col-lg-2">
           <%= link_to user_post_list_path(@post.user.id) do %>
             <%= image_tag @post.user.get_image(100, 100), class: "rounded-circle card-img" %>
@@ -31,7 +31,7 @@
         <p>レート</p>
       </div>
 
-      <div class="row border-bottom pb-1">
+      <div class="row border-bottom border-secondary pb-1">
         <div class="col-sm-4 col-md-2">Total</div>
         <div class="col-sm-8 col-md-4">
           <div class="total-rate" data-score="<%= @post.total_rate %>"></div>
@@ -60,7 +60,7 @@
         <% end %>
       </div>
 
-      <div class="row border-bottom pb-1">
+      <div class="row border-bottom border-secondary pb-1">
         <%= @post.review %>
       </div>
 
@@ -68,7 +68,7 @@
         <p>タグ</p>
       </div>
 
-      <div class="row border-bottom pb-1">
+      <div class="row border-bottom border-secondary pb-1">
         <% if @post.tags != nil %>
           <% @post.tags.each do |tag| %>
             <%= link_to search_tag_path(tag.id) do %>
@@ -95,7 +95,7 @@
       </div>
 
       <% @post.comments.each do |comment| %>
-        <div class="row border rounded mb-2 py-2">
+        <div class="row border rounded border-secondary mb-2 py-2">
           <div class="col-3 col-sm-3 col-md-2 col-lg-2">
             <%= link_to user_post_list_path(comment.user.id) do %>
               <%= image_tag comment.user.get_image(70, 70), class: "rounded-circle card-img" %>
