--- a/app/views/public/searchs/_movie_results.html.erb
+++ b/app/views/public/searchs/_movie_results.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
-  <h5 class="py-4"><%= content %>の映画検索結果（<%= movies.results.count %>件）</h5>
+  <h4 class="py-4"><%= content %>の映画検索結果（<%= movies.results.count %>件）</h4>
 </div>
 <% unless movies.empty? %>
   <% i = 0 %>
   <% while i < movies.results.count %>
-    <div class="row border rounded my-3">
+    <div class="row border border-secondary rounded my-3">
       <div class="col-6 col-md-4 my-3">
         <% if movies.results[i]['poster_path'].present? %>
           <%= image_tag "https://image.tmdb.org/t/p/w342" + movies.results[i]['poster_path'], class: "card-img" %>
