--- a/app/views/public/searchs/detail.html.erb
+++ b/app/views/public/searchs/detail.html.erb
@@ -11,7 +11,7 @@
 
   <div class="row">
     <div class="col-11 col-lg-8 mx-auto">
-      <h4 class="py-4 border-bottom">レビュー（<%= @posts.count %>件）</h4>
+      <h4 class="py-4 border-bottom border-secondary">レビュー（<%= @posts.count %>件）</h4>
       <% @posts.each do |post| %>
         <div class="row">
           <div class="col-3 col-md-2 mb-3">
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <div class="row pt-4 pb-3 mb-3 border-bottom">
+        <div class="row pt-4 pb-3 mb-3 border-bottom border-secondary">
           <div class="col-11 col-sm-6">
             <%= link_to "レビューを見る", post_path(post), class: "btn btn-sm btn-secondary w-75" %>
           </div>
