--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,3 +7,29 @@
     @extend .is-invalid;
   }
 }
+
+.pagetop {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 20px;
+}
+.pagetop a {
+  display: block;
+  color: #FF9849;
+  font-size: 30px;
+  text-decoration: none;
+  padding: 5px 10px;
+	filter:alpha(opacity=50);
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+}
+.pagetop a:hover {
+  display: block;
+  color: #FF6448;
+  text-decoration: none;
+  padding: 5px 10px;
+	filter:alpha(opacity=50);
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+}
