--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,34 @@
       <%= render 'layouts/search' %>
       <%= render 'layouts/notice' %>
 
-
       <%= yield %>
 
     </main>
 
-      <%= render 'layouts/footer' %>
+    <%= render 'layouts/footer' %>
+
+    <p class="pagetop">
+      <a href="#wrap">
+        <i class="fa fa-arrow-circle-up"></i>
+      </a>
+    </p>
+
+    <script>
+      $(document).ready(function() {
+        var pagetop = $('.pagetop');
+          $(window).scroll(function () {
+            if ($(this).scrollTop() > 100) {
+              pagetop.fadeIn();
+            } else {
+              pagetop.fadeOut();
+              }
+            });
+            pagetop.click(function () {
+              $('body, html').animate({ scrollTop: 0 }, 500);
+                return false;
+          });
+      });
+    </script>
 
 
   </body>
