[update]コメントの非同期通信化

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
 
       <%= render 'layouts/header' %>
       <%= render 'layouts/search' %>
-      <%= render 'layouts/notice' %>
+
+      <div id="flash-message">
+        <%= render 'layouts/notice' %>
+      </div>
 
       <%= yield %>
 
