--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -90,42 +90,18 @@
         </div>
       <% end %>
 
-      <div class="row mt-5 mb-2">
-        <h4>コメント（<%= @post.comments.count %>件）</h4>
+      <div class="counter row mt-5 mb-2">
+        <%= render "public/comments/counter", post: @post %>
       </div>
 
-      <% @post.comments.each do |comment| %>
-        <div class="row border rounded border-secondary mb-2 py-2">
-          <div class="col-3 col-sm-3 col-md-2 col-lg-2">
-            <%= link_to user_post_list_path(comment.user.id) do %>
-              <%= image_tag comment.user.get_image(70, 70), class: "rounded-circle card-img" %>
-            <% end %>
-          </div>
-
-          <div class="col">
-            <%= comment.user.name %><br>
-            <%= comment.created_at.strftime('%Y/%m/%d') %><br>
-            <%= comment.comment %>
-
-            <% if comment.user == current_user %>
-              <div class="row">
-                <div class="col text-right">
-                  <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete,
-                    data: { confirm: '本当に削除してもよろしいですか？' }, class: "btn btn-sm btn-outline-danger w-25" %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
+      <div id="comment-list">
+        <%= render "public/comments/comment_list", post: @post %>
+      </div>
 
       <% if user_signed_in? %>
         <div class="row pt-5">
           <div class="col mx-auto text-right">
-            <%= form_with model: [@post, @comment] do |f| %>
-              <%= f.text_area :comment, rows: '2', placeholder: "コメントはこちら", :required => true, class: "form-control" %>
-              <%= f.submit "コメント", class: "btn btn-sm btn-secondary w-50 mt-2" %>
-            <% end %>
+            <%= render "public/comments/comment_form", post: @post, comment: @comment %>
           </div>
         </div>
       <% end %>
