--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -8,18 +8,44 @@
       <% @posts.each do |post| %>
         <div class="row border border-secondary rounded p-2 mb-2">
           <div class="col-3">
-            <%= image_tag post.user.get_image(100, 100), class: "rounded-circle" %>
+            <%= image_tag post.get_tmdb_data[:image_url], class: "card-img" %>
           </div>
 
           <div class="col-9">
-            <p>
-              <%= post.user.name %><br>
-              <%= post.created_at.strftime('%Y/%m/%d') %><text>　（<%= post.comments.count %>）</text><br>
-              <%= post.review %>
-            </p>
+            <div class="row">
+              <P class="font-weight-bold"><%= post.get_tmdb_data[:title] %></P>
+            </div>
 
-            <div class="text-center">
-              <%= link_to "詳細", admin_post_path(post.id), class: "btn btn-sm btn-secondary w-50" %>
+            <div class="row">
+              <div class="col-4 col-md-3 col-lg-2">
+                <%= image_tag post.user.get_image(70, 70), class: "rounded-circle card-img" %>
+              </div>
+
+              <div class="col">
+                <p>
+                  <%= post.user.name %><br>
+                  <%= "投稿日　" + post.created_at.strftime('%Y/%m/%d') %><br>
+                  <%= "コメント　" + post.comments.count.to_s + "件" %>
+                </p>
+              </div>
+            </div>
+
+            <div class="row border-top border-secondary pt-2">
+              <p>
+                <%= post.review.truncate(100, omission: "．．．．．") %>
+              </p>
+            </div>
+
+            <div class="row pt-4">
+              <div class="col-11 col-lg-6">
+                <%= link_to "詳細", admin_post_path(post.id), class: "btn btn-sm btn-secondary w-75" %>
+              </div>
+
+              <% if post.is_spoiler == true %>
+                <div class="col">
+                  <p><i class="fas fa-exclamation-triangle text-warning"></i> ネタバレを含みます！</p>
+                </div>
+              <% end %>
             </div>
           </div>
         </div>
